--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-slick": "^0.28.1",
+    "react-stripe-checkout": "^2.6.3",
     "react-timeout": "^2.0.1",
     "react-youtube": "^7.13.1",
     "sass": "^1.39.0",
