--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-slick": "^0.28.1",
     "react-stripe-checkout": "^2.6.3",
     "react-timeout": "^2.0.1",
+    "react-toastify": "^8.0.3",
     "react-youtube": "^7.13.1",
     "sass": "^1.39.0",
     "slick-carousel": "^1.8.1",
