--- a/.github/workflows/react-ftp-deploy.yml
+++ b/.github/workflows/react-ftp-deploy.yml
@@ -15,7 +15,7 @@ jobs:
       
     - name: 🔨 Build Project
       run: |
-        npm install
+        npm install --no-optional
         npm run build
     
     - name: List output files
