CI edit in YML2

--- a/.github/workflows/react-ftp-deploy.yml
+++ b/.github/workflows/react-ftp-deploy.yml
@@ -15,7 +15,7 @@ jobs:
 
       - name: 🔨 Build Project
         run: |
-          nom install --no-optional
+          npm install --no-optional
           npm run build
         env:
           CI: false
