--- a/.github/workflows/react-ftp-deploy.yml
+++ b/.github/workflows/react-ftp-deploy.yml
@@ -1,11 +1,11 @@
 on: push
-name: 🚀 React FTP Deploy
+name: ⚛️ React FTP Deploy
 jobs:
   web-deploy:
-    name: 🎉 Deploy
+    name: 🚀 Deploy
     runs-on: ubuntu-latest
     steps:
-      - name: 🚚 Get latest code
+      - name: 🔍 Searching for Repo
         uses: actions/checkout@v2
 
       - name: Use Node.js 12
