--- a/.github/workflows/react-ftp-deploy.yml
+++ b/.github/workflows/react-ftp-deploy.yml
@@ -26,7 +26,8 @@ jobs:
       - name: 📂 Sync files
         uses: SamKirkland/FTP-Deploy-Action@4.1.0
         with:
-          server: ftpupload.net/htdocs
+          server: "ftpupload.net"
           username: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
           local-dir: build/
+          target: "/htdocs"
