--- a/.github/workflows/react-ftp-deploy.yml
+++ b/.github/workflows/react-ftp-deploy.yml
@@ -26,8 +26,8 @@ jobs:
       - name: 📂 Sync files
         uses: SamKirkland/FTP-Deploy-Action@4.1.0
         with:
-          server: "ftpupload.net"
+          server: ${{ secrets.FTP_SERVER }}
           username: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
           local-dir: build/
-          target: "/htdocs"
+          server-dir: htdocs/
