--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
+    "bootstrap": "^5.1.1",
     "chokidar": "^2.1.8",
     "clsx": "^1.1.1",
     "jquery": "^3.6.0",
     "movie-trailer": "^2.1.0",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.0.0-rc.0",
     "react-dom": "^17.0.2",
     "react-hover-video-player": "^9.2.0",
     "react-player": "^2.9.0",
