React CI Test Fix(2)

--- a/.github/workflows/react-test.yml
+++ b/.github/workflows/react-test.yml
@@ -19,6 +19,6 @@ jobs:
 
       - name: 👤 npm ci, 🔨build and 🧪️test
         run: |
-          npm ci
+          npm ci --no-optional
           npm run build --if-present
           npm test
